fix wrong type